[tool.poetry]
name = "update-readme-version"
version = "0.1.0"
description = ""
authors = ["Peter Borocz <680893+PBorocz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
